Implemented HTTP JSON request/response.

--- a/lm/sys.cnf
+++ b/lm/sys.cnf
@@ -1,7 +1,2 @@
-database_host=68.15.71.77
-database_port=3306
-database_user=root
-database_password=root
-
-publisher_host=68.15.71.77
-publisher_port=4000
+host_name=192.168.0.201
+host_port=8080
