Fixed settings and tests accordingly.

--- a/sanoxy-api/sanoxy-server/src/main/resources/application-dev.properties
+++ b/sanoxy-api/sanoxy-server/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@
 
 # Connection to cts 
 spring.datasource.url = jdbc:postgresql://localhost:5432/sanoxy?useSSL=false
-spring.datasource.username = luan
+spring.datasource.username = postgres
 spring.datasource.password = password
 spring.datasource.driverClassName = org.postgresql.Driver
 
