--- a/lm/sys.cnf
+++ b/lm/sys.cnf
@@ -1,4 +1,4 @@
-host_name=127.0.0.1
+host_name=192.168.0.201
 host_port=8080
-user_name=davis
-user_password=pwd
+user_name=luan
+user_password=lzn19940830
