--- a/sanoxy-api/sanoxy-server/bin/src/main/resources/application-dev.properties
+++ b/sanoxy-api/sanoxy-server/bin/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.datasource.driverClassName = org.postgresql.Driver
 
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 
