--- a/lm/sys.cnf
+++ b/lm/sys.cnf
@@ -1,4 +1,5 @@
 host_name=192.168.0.201
 host_port=8080
-user_name=farah
-user_password=Abcd#1234
+user_name=davis
+user_password=3201
+workspace=imaginarydb
