--- a/sanoxy-api/sanoxy-server/src/main/resources/application-dev.properties
+++ b/sanoxy-api/sanoxy-server/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.driverClassName = org.postgresql.Driver
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 #
