--- a/lm/sys.cnf
+++ b/lm/sys.cnf
@@ -1,5 +1,5 @@
-host_name=192.168.0.201
+host_name=localhost
 host_port=8080
 user_name=davis
-user_password=3201
+user_password=101
 workspace=imaginarydb
